tests/fail/empty_module.rs
use typestate_proc_macro::typestate;

#[typestate]
mod m {}

fn main() {}