tests/fail/empty_module.stderr
error: Missing `#[automaton]` struct.
 --> $DIR/empty_module.rs:3:1
  |
3 | #[typestate]
  | ^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `typestate` (in Nightly builds, run with -Z macro-backtrace for more info)
